// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Placeholder danger renders correctly 1`] = `
<jest>
  <span
    class="bcl-placeholder placeholder bg-danger"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder dark renders correctly 1`] = `
<jest>
  <span
    class="bcl-placeholder placeholder bg-dark"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder glow renders correctly 1`] = `
<jest>
  <p
    class="placeholder-glow"
  >
    <span
      class="bcl-placeholder placeholder bg-primary"
      style="width: 70%;"
    />
  </p>
</jest>
`;

exports[`OE - Placeholder info renders correctly 1`] = `
<jest>
  <span
    class="bcl-placeholder placeholder bg-info"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder lg renders correctly 1`] = `
<jest>
  <span
    class="bcl-placeholder placeholder placeholder-lg bg-primary"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder light renders correctly 1`] = `
<jest>
  <span
    class="bcl-placeholder placeholder bg-light"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder link renders correctly 1`] = `
<jest>
  <span
    class="bcl-placeholder placeholder bg-link"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder primary renders correctly 1`] = `
<jest>
  <span
    class="bcl-placeholder placeholder bg-primary"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder renders correctly 1`] = `
<jest>
  <span
    class="bcl-placeholder placeholder bg-primary"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder secondary renders correctly 1`] = `
<jest>
  <span
    class="bcl-placeholder placeholder bg-secondary"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder sm renders correctly 1`] = `
<jest>
  <span
    class="bcl-placeholder placeholder placeholder-sm bg-primary"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder success renders correctly 1`] = `
<jest>
  <span
    class="bcl-placeholder placeholder bg-success"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder warning renders correctly 1`] = `
<jest>
  <span
    class="bcl-placeholder placeholder bg-warning"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder wave renders correctly 1`] = `
<jest>
  <p
    class="placeholder-wave"
  >
    <span
      class="bcl-placeholder placeholder bg-primary"
      style="width: 70%;"
    />
  </p>
</jest>
`;

exports[`OE - Placeholder xs renders correctly 1`] = `
<jest>
  <span
    class="bcl-placeholder placeholder placeholder-xs bg-primary"
    style="width: 70%;"
  />
</jest>
`;
